# chat-hub

./: .gitignore  404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/config/: index.html
api/hub/: index.html
api/protocol/chat/: index.html
api/protocol/command/: index.html
api/protocol/message/: index.html
architecture/: index.html
chat_hub/: __init__.py  __main__.py  config.py  main.py
docs/: architecture.md  getting-started.md  index.md
docs/api/: config.md  hub.md
docs/api/protocol/: chat.md  command.md  message.md
getting-started/: index.html
search/: search_index.json
src/: __main__.py  api.py  hub.py  models.py  session.py
src/models/: settings.py
tests/: test_protocol.py
