[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chat_hub*"]

[project]
name = "chat-hub"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
protocol = ["chat-hub-protocol"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

# ── 工具配置 ──────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B"]
